clusters/app.ci/prow/staging/crier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci-staging
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
      - name: crier
        image: us-docker.pkg.dev/k8s-infra-prow/images/crier:v20261007-6ed406f29
        args:
        - --blob-storage-workers=2
        - --config-path=/etc/config/config.yaml
        - --gcs-credentials-file=/etc/gcs-credentials/service-account.json
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-workers=2
        - --kubernetes-blob-storage-workers=2
        - --github-app-id=$(GITHUB_APP_ID)
        - --github-app-private-key-path=/etc/github/cert
        volumeMounts:
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: github-app-credentials
          mountPath: /etc/github
          readOnly: true
        - name: gcs-credentials
          mountPath: /etc/gcs-credentials
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: config
      - name: github-app-credentials
        secret:
          secretName: openshift-prow-github-app
      - name: gcs-credentials
        secret:
          secretName: gce-sa-credentials-gcs-private
