clusters/app.ci/prow/staging/efs-viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci-staging
  name: efs-viewer
  labels:
    app: efs-viewer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: efs-viewer
  template:
    metadata:
      labels:
        app: efs-viewer
    spec:
      containers:
      - name: efs-viewer
        image: quay.io/prucek/testing:efs-viewer
        imagePullPolicy: Always
        args:
        - --job-config-dir=/etc/jobs
        - --port=8080
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: job-configs
          mountPath: /etc/jobs
      volumes:
      - name: job-configs
        persistentVolumeClaim:
          claimName: job-configs-nfs
---
apiVersion: v1
kind: Service
metadata:
  namespace: ci-staging
  name: efs-viewer
  labels:
    app: efs-viewer
spec:
  selector:
    app: efs-viewer
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: ci-staging
  name: efs-viewer
spec:
  host: efs-viewer-ci-staging.apps.ci.l2s4.p1.openshiftapps.com
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: efs-viewer
    weight: 100
